FIX: lang dropdown menu alignment for all inputs.

--- a/resources/assets/less/widgets/inputs.less
+++ b/resources/assets/less/widgets/inputs.less
@@ -60,10 +60,10 @@ input[type=radio] {
 // Field wrapper component styles
 //--------------------------------
 
-input[lang] + .input-group-btn,
-textarea[lang] + .input-group-btn
+.form-control[lang] + .input-group-btn
 {
   vertical-align: top;
+
 
   ul {
     top: auto;
